# rust-academy

./: .gitignore  LICENSE  README.md
async-messaging-system/client/: Cargo.toml
async-messaging-system/client/src/: client.rs  config.rs  main.rs
async-messaging-system/common/: Cargo.toml
async-messaging-system/common/src/: connection.rs  lib.rs  util.rs
async-messaging-system/common/src/connection/: error.rs  frame.rs
async-messaging-system/common/src/connection/frame/: auth.rs  auth_message.rs  message.rs
async-messaging-system/server/: Cargo.toml
async-messaging-system/server/src/: config.rs  main.rs  server.rs
hello_world/: homework.md
hello_world/src/: main.rs
messaging-system/: Cargo.toml  README.md  homework.md
messaging-system/client/: Cargo.toml
messaging-system/client/examples/: rusty_novel.txt
messaging-system/client/src/: client.rs  config.rs  main.rs  stdio_processor.rs
messaging-system/common/: Cargo.toml
messaging-system/common/src/: api.rs  config.rs  error.rs  lib.rs  util.rs
messaging-system/server/: Cargo.toml
messaging-system/server/src/: config.rs  main.rs  server.rs
transmuter/: Cargo.toml  homework.md
transmuter/src/: error.rs  main.rs  transmute.rs
transmuter_multithreading/: Cargo.toml  homework.md
transmuter_multithreading/examples/: data.csv  invalid_data.csv
transmuter_multithreading/src/: main.rs  stdio_processor.rs  transmute.rs
transmuter_multithreading/src/transmute/: csv.rs
transmuter_upgrade/: Cargo.toml  homework.md
transmuter_upgrade/src/: error.rs  main.rs  transmute.rs
(+7 files in other folders)
