[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["net"] }
bytes = "1"
anyhow = "1"
thiserror = "1"
colored = "2.0.4"
log = "0.4"
serde = {version = "1.0", features = ["derive"]}
bincode = "1.3"



